# forward-auth-oidc-claims

./: Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  deploy-app.yaml  deploy-secrets.yaml
src/: additional_claims.rs  args.rs  cookie.rs  demo.rs  drop_claims.rs  enrichment.rs  main.rs  oidc_flow.rs  validate.rs
