[package]
name = "forward-auth-oidc-claims"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
clap = { version = "4.5.7", features = ["derive"] }
openidconnect = "3.5.0"
reqwest = "0.12.5"
serde = { version = "1.0.203", features = ["derive"] }
tokio = { version = "1.38.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
